# Project_SDL

Base_Project/: CMakeLists.txt
Base_Project/Project_SDL_Part1_base/: Project_SDL1.cpp  Project_SDL1.h  main.cpp
Base_Project/Project_SDL_Part2_base/: CMakeLists.txt  Project_SDL2.cpp  Project_SDL2.h  animal.cpp  characters.cpp  main.cpp  playable_character.cpp
